# Yolov8-Hisi

./: README.md  build.sh  readme_zh.txt
code/: CMakeLists.txt  DetectCfgParse.cpp  DetectCfgParse.h  DetectPostprocess.cpp  DetectPostprocess.h  ForwardEngine.cpp  ForwardEngine.h  Utils.cpp  Utils.h  Yolo.cpp  Yolo.h  main.cpp
data/: draw_box.py  model.cfg  sample_input.yuv  yolov8n_384x640.om
output/: main
